--- a/templates/creeper/creeper-create.html
+++ b/templates/creeper/creeper-create.html
@@ -9,7 +9,7 @@
 <form action="" method="POST">
   {% csrf_token %}
   {{ form|crispy}}
-  <input type="submit" value="SAVE>
+  <input type="submit" value="SAVE">
 </form>
 
 {% endblock content %}
