--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,12 +11,23 @@ html {
   }
 }
 
+.img-fluid{
+  margin-top: 80px;
+}
+
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
+  background-color: rgb(37, 37, 37);
 }
 
 .container {
   max-width: 960px;
+}
+.container-max {
+  max-width: 500px;
+  margin: 0 auto;
+  align-content: center;
+  text-align: center;
 }
 
 .pricing-header {
@@ -29,5 +40,32 @@ body {
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
+  background-color: #000000;
+}
+.footer a {
+  color: white;
+  margin: 0 auto;
+}
+
+.home{
+  color: black;
+  font-weight: bold;
+}
+
+.list li a{
+  color: rgb(0, 0, 0);
+  font-size: 3vw;
+  font-family: 'Nosifer', cursive;
+}
+
+h2 {
+  color: black;
+}
+
+p {
+  color: black;
+}
+
+h5 a {
+  color: rgb(168, 22, 22);
 }
