--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,13 +16,16 @@
 
 <link rel="stylesheet" href="{% static 'css/base.css' %}">
 {% endblock %}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <main role="main">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal">
-        <a href="{% url 'home' %}">DjangoX</a>
+        <a href="{% url 'home' %}" class="home">Creeps</a>
       </h5>
       <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
       <nav class="my-2 my-md-0 mr-md-3">
@@ -56,8 +59,8 @@
   </div>
 
   <footer class="footer">
-    <div class="container">
-      <span class="text-muted">Footer...</span>
+    <div class="container-max">
+      <span class="text-muted"><a href="https://github.com/Mmarcos01">My GitHub</a></span>
     </div>
   </footer>
 
