--- a/templates/creeper/creeper-detail.html
+++ b/templates/creeper/creeper-detail.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 
-<h2>Details about {{ creeper.name }}</h2>
-<h2>Owner: {{ creeper.owner }}</h2>
+<h2>Name: {{ creeper.name }}</h2>
 <p>{{ creeper.description }}</p>
-<a href="{% url 'creeper_update' creeper.pk %}">+ Update Creeper</a>
-<a href="{% url 'creeper_delete' creeper.pk %}">- Delete Creeper</a>
+<h4>Survivability: {{ creeper.survivability }}</h4>
+
+<h5><a href="{% url 'creeper_update' creeper.pk %}">🩹 Update Creeper</a></h5>
+<h5><a href="{% url 'creeper_delete' creeper.pk %}">🪓 Delete Creeper</a></h5>
 
 {% endblock content %}
